--- a/download.html
+++ b/download.html
@@ -33,6 +33,37 @@
                 <p class="header">Informations</p>
             </div>
             <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.8/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.8.zip">2.0.8</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 1 - Scénario 1 : Panneau de réflexion : la falaise -> une falaise</li>
+                        <li>Chapitre 1 - Scénario 1 : Texte de victoire : soudain, le poussa -> le poussa soudainement
+                        </li>
+                        <li>Chapitre 1 - Scénario 2 : Bureau : "Je, Sebastian Cloudsley" -> "Moi, Sebastian Cloudlsey"
+                        </li>
+                        <li>Chapitre 1 - Scénario 3 : Panneau de réflexion : a ordonné -> a ordonné à</li>
+                        <li>Chapitre 1 - Scénario 3 : Roulement stable -> Roulement de l'écurie</li>
+                        <li>Chapitre 1 - Scénario 3 : Testament pour Rose et Edmund : Utilisation du tutoiement</li>
+                        <li>Chapitre 2 - Scénario 1 : Panneau de réflexion : Pendant -> pendant</li>
+                        <li>Chapitre 4 - Scénario 1 : Texte de victoire : Le parti de l'ordre -> Le Parti de l'Ordre
+                        </li>
+                        <li>Chapitre 4 - Scénario 1 : Texte de victoire : jugé lors du tribunal comme ayant-> condamné
+                            par le tribunal pour avoir</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : est considéré comme ayant la -> est
+                            condamné pour avoir la</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : a été utilisé sur lui -> Pour exécuter la
+                            sentence, a été utilisé sur lui</li>
+                        <li>Chapitre 4 - Scénario 2 : Texte de victoire : avec le parti de l'ordre -> avec le Parti de
+                            l'Ordre</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
                 <p>2.0.1a</p>
                 <p>
                     <a
@@ -128,6 +159,37 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.8/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.8.zip">2.0.8</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 1 - Scénario 1 : Panneau de réflexion : la falaise -> une falaise</li>
+                        <li>Chapitre 1 - Scénario 1 : Texte de victoire : soudain, le poussa -> le poussa soudainement
+                        </li>
+                        <li>Chapitre 1 - Scénario 2 : Bureau : "Je, Sebastian Cloudsley" -> "Moi, Sebastian Cloudlsey"
+                        </li>
+                        <li>Chapitre 1 - Scénario 3 : Panneau de réflexion : a ordonné -> a ordonné à</li>
+                        <li>Chapitre 1 - Scénario 3 : Roulement stable -> Roulement de l'écurie</li>
+                        <li>Chapitre 1 - Scénario 3 : Testament pour Rose et Edmund : Utilisation du tutoiement</li>
+                        <li>Chapitre 2 - Scénario 1 : Panneau de réflexion : Pendant -> pendant</li>
+                        <li>Chapitre 4 - Scénario 1 : Texte de victoire : Le parti de l'ordre -> Le Parti de l'Ordre
+                        </li>
+                        <li>Chapitre 4 - Scénario 1 : Texte de victoire : jugé lors du tribunal comme ayant-> condamné
+                            par le tribunal pour avoir</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : est considéré comme ayant la -> est
+                            condamné pour avoir la</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : a été utilisé sur lui -> Pour exécuter la
+                            sentence, a été utilisé sur lui</li>
+                        <li>Chapitre 4 - Scénario 2 : Texte de victoire : avec le parti de l'ordre -> avec le Parti de
+                            l'Ordre</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
@@ -271,7 +333,6 @@
                     <p>Prise en compte des changements apportés par la version 2.0.5</p>
                 </div>
             </div>
-
             <div class="row">
                 <p>2.0.4</p>
                 <p>
@@ -284,7 +345,6 @@
                     <p>DLC The Lemurian Vampire traduit</p>
                 </div>
             </div>
-
             <div class="row">
                 <p>1.0.7</p>
                 <p>
@@ -304,7 +364,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="row">
                 <p>1.0.7</p>
                 <p>
@@ -330,7 +389,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="row">
                 <p>1.0.7</p>
                 <p>
@@ -345,7 +403,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="row">
                 <p>1.0.7</p>
                 <p>
@@ -368,7 +425,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="row">
                 <p>1.0.7</p>
                 <p>
@@ -377,7 +433,6 @@
                 </p>
                 <p>DLC non traduit</p>
             </div>
-
         </div>
         <p><a href="index.html">Retour à l'accueil</a></p>
     </section>
