--- a/download.html
+++ b/download.html
@@ -36,6 +36,22 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.9/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.9.zip">2.0.9</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 3 : Edmond -> Edmund</li>
+                        <li>Chapitre 3 - Scénario 1 : Panneau de réflexion : piégé -> embusqué</li>
+                        <li>Chapitre 3 - Scénario 2 : Histoire : maître de -> Maître</li>
+                        <li>Chapitre 3 - Scénario 2 : Lettre à Walter : Lazaus -> Lazarus</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.8/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.8.zip">2.0.8</a>
                 </p>
                 <div>
@@ -159,6 +175,22 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.9/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.9.zip">2.0.9</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 3 : Edmond -> Edmund</li>
+                        <li>Chapitre 3 - Scénario 1 : Panneau de réflexion : piégé -> embusqué</li>
+                        <li>Chapitre 3 - Scénario 2 : Histoire : maître de -> Maître</li>
+                        <li>Chapitre 3 - Scénario 2 : Lettre à Walter : Lazaus -> Lazarus</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
