--- a/download.html
+++ b/download.html
@@ -36,6 +36,31 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.10/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.10.zip">2.0.10</a>
+                </p>
+                <div>
+                    <p>Texte de victoire : aucun indice accessible -> aucun indice utilisé</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Texte de victoire : serviteuse -> servante</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : Toutefous -> Toutefois</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : a .... à lui -> lui a</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : donc il a forcé ... de -> donc il
+                            a forcé ... son/sa</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Texte de victoire : Phrase finale en double</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : verbes au passé composé au lieu
+                            du passé simple pour la concordance des temps</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : prononcé/e et activé/e</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : ajout de déterminants après le
+                            verbe</li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.9/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.9.zip">2.0.9</a>
                 </p>
                 <div>
@@ -175,6 +200,31 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.10/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.10.zip">2.0.10</a>
+                </p>
+                <div>
+                    <p>Texte de victoire : aucun indice accessible -> aucun indice utilisé</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Texte de victoire : serviteuse -> servante</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : Toutefous -> Toutefois</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : a .... à lui -> lui a</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Panneau de réflexion : donc il a forcé ... de -> donc il
+                            a forcé ... son/sa</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Texte de victoire : Phrase finale en double</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : verbes au passé composé au lieu
+                            du passé simple pour la concordance des temps</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : prononcé/e et activé/e</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : ajout de déterminants après le
+                            verbe</li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
