--- a/download.html
+++ b/download.html
@@ -32,6 +32,7 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
+            <!--
             <div class="row">
                 <p>2.0.1a</p>
                 <p>
@@ -56,7 +57,7 @@
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
             <div class="row">
                 <p>2.0.1a</p>
                 <p>
@@ -201,6 +202,7 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
+            <!--
             <div class="row">
                 <p>2.0.5</p>
                 <p>
@@ -225,7 +227,7 @@
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
             <div class="row">
                 <p>2.0.5</p>
                 <p>
