--- a/download.html
+++ b/download.html
@@ -32,7 +32,6 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
-            <!--
             <div class="row">
                 <p>2.0.1a</p>
                 <p>
@@ -57,7 +56,7 @@
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
                     </ul>
                 </div>
-            </div>-->
+            </div>
             <div class="row">
                 <p>2.0.1a</p>
                 <p>
@@ -202,7 +201,6 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
-            <!--
             <div class="row">
                 <p>2.0.5</p>
                 <p>
@@ -227,7 +225,7 @@
                         <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : aurpès -> auprès</li>
                     </ul>
                 </div>
-            </div>-->
+            </div>
             <div class="row">
                 <p>2.0.5</p>
                 <p>
