--- a/problem.html
+++ b/problem.html
@@ -33,7 +33,7 @@
             <div class="form-group">
                 <label for="patchVersion">Version de la traduction :</label>
                 <input type="text" id="patchVersion" name="entry.1906005135" placeholder="2.0.10"
-                    pattern="[0-9].[0-9].[0-9]" required />
+                    pattern="[0-9].[0-9].[0-9][0-9]" required />
             </div>
             <div class="form-group">
                 <label for="location">Où est le problème :</label>
