--- a/problem.html
+++ b/problem.html
@@ -18,12 +18,13 @@
             <li><a href="download.html">Téléchargement</a></li>
             <li><a href="backup.html">Sauvegardes</a></li>
             <li><a class="active" href="problem.html">Signaler un problème</a></li>
-
+            <li><a href="choice.html">Choix de traduction</a></li>
         </ul>
     </nav>
     <section>
         <h3 class="problem">Signaler un problème dans la traduction :</h3>
-
+        <p>Avant de signaler un problème, vérifier dans <a href="choice.html">Choix de traduction</a> si ce n'est pas un
+            choix fait exprès.</p>
         <form target="_self" method="POST" id="form"
             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSevNowwgrc0XijFzPAKLEqtlxb7EuvPvvM41pETEQJtsXxekA/formResponse">
             <div class="form-group">
@@ -32,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label for="patchVersion">Version de la traduction :</label>
-                <input type="text" id="patchVersion" name="entry.1906005135" placeholder="2.0.10" required />
+                <input type="text" id="patchVersion" name="entry.1906005135" placeholder="2.1.0" required />
             </div>
             <div class="form-group">
                 <label for="location">Où est le problème :</label>
