--- a/backup.html
+++ b/backup.html
@@ -18,6 +18,7 @@
             <li><a href="download.html">Téléchargement</a></li>
             <li><a class="active" href="backup.html">Sauvegardes</a></li>
             <li><a href="problem.html">Signaler un problème</a></li>
+            <li><a href="choice.html">Choix de traduction</a></li>
         </ul>
     </nav>
     <section>
