--- a/backup.html
+++ b/backup.html
@@ -19,6 +19,7 @@
             <li><a class="active" href="backup.html">Sauvegardes</a></li>
             <li><a href="problem.html">Signaler un problème</a></li>
             <li><a href="choice.html">Choix de traduction</a></li>
+            <li><a href="credits.html">Crédits</a></li>
         </ul>
     </nav>
     <section>
