--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="backup.html">Sauvegardes</a></li>
             <li><a href="problem.html">Signaler un problème</a></li>
             <li><a href="choice.html">Choix de traduction</a></li>
+            <li><a href="credits.html">Crédits</a></li>
         </ul>
     </nav>
     <section>
@@ -35,8 +36,8 @@
         <p>Sauvegardes : <a href="backup.html">Cliquer ici</a></p>
 
         <p>N'hésitez pas à faire des retours pour améliorer cette version française <a href="problem.html">ici</a></p>
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tTyxG2td9j8" title="YouTube video player"
-            frameborder="0"
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tTyxG2td9j8"
+            title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
     </section>
