--- a/choice.html
+++ b/choice.html
@@ -39,13 +39,22 @@
                     <li><a href="choice.html#1-yacht">Yacht</a></li>
                 </ul>
             </li>
-            <li><a href="choice.html#2">Chapitre 1 - Scénario 3</a></li>
+            <li><a href="choice.html#2">Chapitre 1 - Scénario 3</a>
+                <ul>
+                    <li><a href="choice.html#2-idole">Idole d'Or</a></li>
+                    <li><a href="choice.html#2-monnaie">Monnaie</a></li>
+                </ul>
+            </li>
             <li><a href="choice.html#3">Chapitre 2 - Scénario 1</a>
                 <ul>
                     <li><a href="choice.html#3-nemoubliepas">"Ne m'oublie pas"</a></li>
                 </ul>
             </li>
-            <li><a href="choice.html#4">Chapitre 2 - Scénario 2</a></li>
+            <li><a href="choice.html#4">Chapitre 2 - Scénario 2</a>
+                <ul>
+                    <li><a href="choice.html#4-cognac">Cognac</a></li>
+                </ul>
+            </li>
             <li><a href="choice.html#5">Chapitre 2 - Scénario 3</a>
                 <ul>
                     <li><a href="choice.html#5-augmentediminue">Augmenté et diminué</a></li>
@@ -57,17 +66,66 @@
                     <li><a href="choice.html#6-gryphon">Gryphon Réincarné</a></li>
                 </ul>
             </li>
-            <li><a href="choice.html#7">Chapitre 3 - Scénario 2</a></li>
-            <li><a href="choice.html#8">Chapitre 3 - Scénario 3</a></li>
-            <li><a href="choice.html#9">Chapitre 4 - Scénario 1</a></li>
-            <li><a href="choice.html#10">Chapitre 4 - Scénario 2</a></li>
-            <li><a href="choice.html#11">Epilogue</a></li>
-            <li><a href="choice.html#12">DLC Spider of Lanka - Scénario 1</a></li>
-            <li><a href="choice.html#13">DLC Spider of Lanka - Scénario 2</a></li>
-            <li><a href="choice.html#14">DLC Spider of Lanka - Scénario 3</a></li>
-            <li><a href="choice.html#15">DLC Lemurian Vampire - Scénario 1</a></li>
-            <li><a href="choice.html#16">DLC Lemurian Vampire - Scénario 2</a></li>
-            <li><a href="choice.html#17">DLC Lemurian Vampire - Scénario 3</a></li>
+            <li><a href="choice.html#7">Chapitre 3 - Scénario 2</a>
+                <ul>
+                    <li><a href="choice.html#7-company">Seven Seas Company</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#8">Chapitre 3 - Scénario 3</a>
+                <ul>
+                    <li><a href="choice.html#8-xeres">Xérès</a></li>
+                    <li><a href="choice.html#8-lemurie">Lémurie</a></li>
+                    <li><a href="choice.html#8-lemurien">Lémurien</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#9">Chapitre 4 - Scénario 1</a>
+                <ul>
+                    <li><a href="choice.html#9-parti">Parti de l'Ordre</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#10">Chapitre 4 - Scénario 2</a>
+                <ul>
+                    <li><a href="choice.html#10-lieux">Lieux</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#11">Epilogue</a>
+                <ul>
+                    <li><a href="choice.html#11-determinants">Déterminants</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#12">DLC Spider of Lanka - Scénario 1</a>
+                <ul>
+                    <li><a href="choice.html#12-lys">Lys Jaune</a></li>
+                    <li><a href="choice.html#12-lanka">Lanka</a></li>
+                    <li><a href="choice.html#12-lankais">Lankais</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#13">DLC Spider of Lanka - Scénario 2</a>
+                <ul>
+                    <li><a href="choice.html#13-titania">Titania Printing House</a></li>
+                    <li><a href="choice.html#13-maitre">Maître-espion et maitre-lame</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#14">DLC Spider of Lanka - Scénario 3</a>
+                <ul>
+                    <li><a href="choice.html#14-titania">Titania Press</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#15">DLC Lemurian Vampire - Scénario 1</a>
+                <ul>
+                    <li><a href="choice.html#15-habitant">Habitant</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#16">DLC Lemurian Vampire - Scénario 2</a>
+                <ul>
+                    <li><a href="choice.html#16-habitant">Habitant de la Tour</a></li>
+                </ul>
+            </li>
+            <li><a href="choice.html#17">DLC Lemurian Vampire - Scénario 3</a>
+                <ul>
+                    <li><a href="choice.html#17-longevite">Longévité</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="choice" id="general">
             <h3>Général</h3>
@@ -112,7 +170,25 @@
         </div>
         <div class="choice" id="2">
             <h3>Chapitre 1 - Scénario 3 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="2-idole">
+                <h4>Idole d'Or</h4>
+                <p>En anglais "Golden Idol", il y avait deux traductions possibles :
+                <ul>
+                    <li>Idole d'Or</li>
+                    <li>Idole Dorée</li>
+                </ul>
+                J'ai préféré la première traduction car elle ajoute du mysticisme, de la valeur et de l'importance de
+                telle manière que la "révélation" finale marque un contraste plus important sur la vérite.
+                <details>
+                    <summary>SPOILER</summary>
+                    En réalité, l'idole est faite en laiton doré.
+                </details>
+                </p>
+            </div>
+            <div id="2-monnaie">
+                <h4>Monnaie</h4>
+                <p>Je n'ai pas changé les termes relatifs à la monnaie pour préserver le contexte anglais.</p>
+            </div>
         </div>
         <div class="choice" id="3">
             <h3>Chapitre 2 - Scénario 1 :</h3>
@@ -133,7 +209,11 @@
         </div>
         <div class="choice" id="4">
             <h3>Chapitre 2 - Scénario 2 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="4-cognac">
+                <h4>Cognac</h4>
+                <p>En anglais, un des alcools est du "brandy", pour comprendre immédiatemment de quel genre d'alcool le
+                    jeu fait écho, j'ai décidé de prendre un type de brandy très connu en France, le cognac.</p>
+            </div>
         </div>
         <div class="choice" id="5">
             <h3>Chapitre 2 - Scénario 3 :</h3>
@@ -176,47 +256,118 @@
         </div>
         <div class="choice" id="7">
             <h3>Chapitre 3 - Scénario 2 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="7-company">
+                <h4>Seven Seas Company</h4>
+                <p>Je n'ai pas traduit Seven Seas Company pour préserver le contexte anglais.</p>
+            </div>
         </div>
         <div class="choice" id="8">
             <h3>Chapitre 3 - Scénario 3 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="8-xeres">
+                <h4>Xérès</h4>
+                <p>Le vin "cherry" correspond au "xérès".</p>
+            </div>
+            <div id="8-lemurie">
+                <h4>Lémurie</h4>
+                <p>"Lemuria" est un continent anciennement théorisé qui se trouvait dans l'actuel Océan Indien et qui
+                    aurait été immergé, depuis les scientifiques s'accordent pour dire que ce continent n'a pas existé,
+                    il a été traduit en "Lémurie" de manière équivalente à d'autres noms de lieux. (exemple : Italie)
+                </p>
+            </div>
+            <div id="8-lemurien">
+                <h4>Lémurien</h4>
+                <p>"Lemurian" correspond au nom du peuple ainsi qu'au qualificatif de ce qui est lié au continent
+                    "Lemuria", il a été traduit en "Lémurien/ne" de manière équivalente à d'autres noms de peuple et de
+                    qualificatifs. (exemple : Italien/ne)
+            </div>
         </div>
         <div class="choice" id="9">
             <h3>Chapitre 4 - Scénario 1 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="9-parti">
+                <h4>Parti de l'Ordre</h4>
+                <p>En anglais "Order Party", il est difficile de trouver une formulation sans le mot "de" qui ne nuit
+                    pas au mot "Ordre" et à la référence à l'idée "d'Ordre Mondial".</p>
+            </div>
         </div>
         <div class="choice" id="10">
             <h3>Chapitre 4 - Scénario 2 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="10-lieux">
+                <h4>Lieux</h4>
+                <p>Les noms des lieux comme "Bellchester", "Blackfield" ou encore "Bellwood" n'ont pas été traduits pour
+                    préserver le contexte anglais</p>
+            </div>
         </div>
         <div class="choice" id="11">
             <h3>Epilogue :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="11-determinants">
+                <h4>Déterminants</h4>
+                <p>Contrairement aux autres scénarios, j'ai préféré inclure les déterminants dans les mots traduits car
+                    c'est le dernier scénario, qu'à ce stade du jeu, le joueur sait normalement ce qu'il s'est passé et
+                    les mots proposés limitent encore plus rendant ce scénario assez simple de base à résoudre.</p>
+            </div>
         </div>
         <div class="choice" id="12">
             <h3>DLC Spider Of Lanka - Scénario 1 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="12-lys">
+                <h4>Lys Jaune</h4>
+                <p>Contrairement à d'autres noms de lieux, "Yellow Lily" fait référence aux fleurs, du lys jaune,
+                    présentes dans la salle.
+                </p>
+            </div>
+            <div id="12-lanka">
+                <h4>Lanka</h4>
+                <p>Nom de l'île en référence au Sri Lanka, le nom est gardé tel quel pour préserver la référence.</p>
+            </div>
+            <div id="12-lankais">
+                <h4>Lankais</h4>
+                <p>En anglais "Lankan", en référence au nom anglais du peuple "Sri Lankan", la référence est conservé
+                    avec "Lankais" référençant "Sri Lankais".</p>
+            </div>
         </div>
         <div class="choice" id="13">
             <h3>DLC Spider Of Lanka - Scénario 2 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="13-titania">
+                <h4>Titania Printing House</h4>
+                <p>Le nom n'a pas été traduit pour conserver le contexte anglais.
+            </div>
+            <div id="13-maitre">
+                <h4>Maître-espion et maître-lame</h4>
+                <p>En anglais "spymaster" et "blademaster", les traductions ne devaient pas être des formulations trop
+                    longues sur plusieurs mots tout en conservant l'idée d'espionnage et de guerrier utilisant une lame.
+                </p>
+            </div>
         </div>
         <div class="choice" id="14">
             <h3>DLC Spider Of Lanka - Scénario 3 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="14-titania">
+                <h4>Titania Press</h4>
+                <p>Le nom n'a pas été traduit pour conserver le contexte anglais.</p>
+            </div>
         </div>
         <div class="choice" id="15">
             <h3>DLC Lemurian Vampire - Scénario 1 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="15-habitant">
+                <h4>Habitant</h4>
+                <p>En anglais "dweller", obtenu par une image sur l'histoire des Lémuriens, le terme doit à la fois
+                    faire référence à l'image et à la fois doit correspondre à une entité qui vit dans une tour, le
+                    terme "habitant" reste général et ambigu.</p>
+            </div>
         </div>
         <div class="choice" id="16">
             <h3>DLC Lemurian Vampire - Scénario 2 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="16-habitant">
+                <h4>Habitant de la Tour</h4>
+                <p>En anglais "Tower Dweller" et similaire au précédent scénario, il faut un nom qui évoque le coté
+                    mystérieux de l'entité tout en étant factuel.</p>
+            </div>
         </div>
         <div class="choice" id="17">
             <h3>DLC Lemurian Vampire - Scénario 3 :</h3>
-            <p>Rien pour le moment.</p>
+            <div id="17-longevité">
+                <h4>Longévité</h4>
+                <p>En anglais "lifespan", la traduction exacte est "durée de vie" mais il fallait un mot, "longévité"
+                    est assez proche et correspond au contexte.</p>
+            </div>
         </div>
     </section>
 </body>
