--- a/choice.html
+++ b/choice.html
@@ -43,6 +43,8 @@
                 <ul>
                     <li><a href="choice.html#2-idole">Idole d'Or</a></li>
                     <li><a href="choice.html#2-monnaie">Monnaie</a></li>
+                    <li><a href="choice.html#2-tester">Tester</a></li>
+                    <li><a href="choice.html#2-grever">Grever</a></li>
                 </ul>
             </li>
             <li><a href="choice.html#3">Chapitre 2 - Scénario 1</a>
@@ -188,6 +190,14 @@
             <div id="2-monnaie">
                 <h4>Monnaie</h4>
                 <p>Je n'ai pas changé les termes relatifs à la monnaie pour préserver le contexte anglais.</p>
+            </div>
+            <div id="2-tester">
+                <h4>Tester</h4>
+                <p>En droit, une personne qui teste est une personne qui fait son testament.</p>
+            </div>
+            <div id="2-grever">
+                <h4>Grever</h4>
+                <p>Grever signifie être alourdi d'une charge financière.</p>
             </div>
         </div>
         <div class="choice" id="3">
