--- a/credits.html
+++ b/credits.html
@@ -44,6 +44,7 @@
         <p>YiffyCupcake</p>
         <p>Babel Fish</p>
         <p>MowMow</p>
+        <p>Pandametal</p>
     </section>
 </body>
 
