--- a/download.html
+++ b/download.html
@@ -38,6 +38,39 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.1/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.1.1.zip">2.1.1</a>
+                </p>
+                <div>
+                    <p>Mise à jour <a href="choice.html">des choix de traductions</a> en fonction des retours.</p>
+                    <p>Mise à jour des crédits en jeu et sur le <a href="credits.html">site</a>.</p>
+                    Changements mineurs :
+                    <details>
+                        <summary>Chapitre 1 - Scénario 1 :</summary>
+                        <ul>
+                            <li>Texte de victoire : expédition corrigée et "hors" supprimé</li>
+                        </ul>
+                    </details>
+                    <details>
+                        <summary>Chapitre 1 - Scénario 3 :</summary>
+                        <ul>
+                            <li>Affiche sur l'écurie : cheveaux -> chevaux</li>
+                            <li>pounds -> livres</li>
+                            <p>Ticket de paris : Place -> Placé, Show -> Podium</p>
+                        </ul>
+                    </details>
+                    <details>
+                        <summary>Chapitre 2 - Scénario 1 :</summary>
+                        <ul>
+                            <li>Texte de victoire : répondant au nom -> se faisant appeler</li>
+                            <li>Texte de victoire : piéger -> faire accuser</li>
+                        </ul>
+                    </details>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.0/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.1.0.zip">2.1.0</a>
                 </p>
                 <div>
@@ -408,6 +441,39 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.1/TheCaseOfTheGoldenIdol-2.0.5_FR-2.1.1.zip">2.1.1</a>
+                </p>
+                <div>
+                    <p>Mise à jour <a href="choice.html">des choix de traductions</a> en fonction des retours.</p>
+                    <p>Mise à jour des crédits en jeu et sur le <a href="credits.html">site</a>.</p>
+                    Changements mineurs :
+                    <details>
+                        <summary>Chapitre 1 - Scénario 1 :</summary>
+                        <ul>
+                            <li>Texte de victoire : expédition corrigée et "hors" supprimé</li>
+                        </ul>
+                    </details>
+                    <details>
+                        <summary>Chapitre 1 - Scénario 3 :</summary>
+                        <ul>
+                            <li>Affiche sur l'écurie : cheveaux -> chevaux</li>
+                            <li>pounds -> livres</li>
+                            <p>Ticket de paris : Place -> Placé, Show -> Podium</p>
+                        </ul>
+                    </details>
+                    <details>
+                        <summary>Chapitre 2 - Scénario 1 :</summary>
+                        <ul>
+                            <li>Texte de victoire : répondant au nom -> se faisant appeler</li>
+                            <li>Texte de victoire : piéger -> faire accuser</li>
+                        </ul>
+                    </details>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
