--- a/download.html
+++ b/download.html
@@ -38,6 +38,22 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.2/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.1.2.zip">2.1.2</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : un "les" en trop a été enlevé
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Lettre à Stirna : Je la veux -> Je la veux elle</li>
+                        <li>DLC Lemurian Vampire - Scénario 3 : Panneau de réflexion : eux/elles -> lui/elle</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.1/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.1.1.zip">2.1.1</a>
                 </p>
                 <div>
@@ -441,6 +457,22 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.2/TheCaseOfTheGoldenIdol-2.0.5_FR-2.1.2.zip">2.1.2</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : un "les" en trop a été enlevé
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Lettre à Stirna : Je la veux -> Je la veux elle</li>
+                        <li>DLC Lemurian Vampire - Scénario 3 : Panneau de réflexion : eux/elles -> lui/elle</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
