--- a/download.html
+++ b/download.html
@@ -38,6 +38,38 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.2.0/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.2.0.zip">2.2.0</a>
+                </p>
+                <div>
+                    Changements majeurs (scénario à reset si scénario déjà commencé ou utiliser les sauvegardes du
+                    site) :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Lémurien -> Lémuriens </li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "Lémuriens" et
+                            "ancêtres" ont été inversés</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "communauté" et
+                            "protection" ont été inversés</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : les tuiles ont changé d'ordre et
+                            lorsqu'elles sont dans le bon ordre, les déterminants apparaissent pour former une phrase
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Habitant de -> l'Habitant de</li>
+                        <li>DLC Lemurian Vampire - Scénario 3 : Habitant de -> l'Habitant de</li>
+                    </ul>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Salle du conseil : LES COMMUNES -> LA COMMUNE</li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : ajout de * = aucun déterminant
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : squelette de -> squelette de */l'
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : de -> de */l'</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.1.2/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.1.2.zip">2.1.2</a>
                 </p>
                 <div>
@@ -457,6 +489,37 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.2.0/TheCaseOfTheGoldenIdol-2.0.5_FR-2.2.0.zip">2.2.0</a>
+                </p>
+                <div>
+                    Changements majeurs (scénario à reset si scénario déjà commencé ou utiliser les sauvegardes du
+                    site) :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Lémurien -> Lémuriens </li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "Lémuriens" et
+                            "ancêtres" ont été inversés</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : Les images de "communauté" et
+                            "protection" ont été inversés</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Panneau de réflexion : les tuiles ont changé d'ordre et
+                            lorsqu'elles sont dans le bon ordre, les déterminants apparaissent pour former une phrase
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Habitant de -> l'Habitant de</li>
+                        <li>DLC Lemurian Vampire - Scénario 3 : Habitant de -> l'Habitant de</li>
+                    </ul>
+                    Changements mineurs :
+                    <ul>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : ajout de * = aucun déterminant
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : squelette de -> squelette de */l'
+                        </li>
+                        <li>DLC Lemurian Vampire - Scénario 2 : Panneau de réflexion : de -> de */l'</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
